# dev_ws

install/: local_setup.sh  setup.sh
install/my_bot/lib/my_bot/: joint_publisher
install/my_bot/share/ament_index/resource_index/package_run_dependencies/: my_bot
install/my_bot/share/ament_index/resource_index/parent_prefix_path/: my_bot
install/my_bot/share/my_bot/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/my_bot/share/my_bot/cmake/: my_botConfig-version.cmake  my_botConfig.cmake
install/my_bot/share/my_bot/config/: controllers.yaml  empty.yaml  gaz_ros2_ctl_use_sim.yaml  gz_bridge.yaml  joint_trajectory_publisher.yaml  keyboard_control.py
install/my_bot/share/my_bot/description/: camera.xacro  gazebo_control.xacro  inertial_macros.xacro  robot.urdf  robot.urdf.xacro  robot_core.xacro  ros2_control.xacro
install/my_bot/share/my_bot/environment/: ament_prefix_path.dsv  path.dsv
install/my_bot/share/my_bot/launch/: launch_sim.launch.py  launch_sim_arti.launch.py  my_bot.launch.py  rsp.launch.py
install/my_bot/share/my_bot/worlds/: empty.world  obstacles.world
install/my_package/share/my_package/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/my_package/share/my_package/cmake/: my_packageConfig-version.cmake  my_packageConfig.cmake
install/my_package/share/my_package/environment/: ament_prefix_path.dsv  path.dsv
install/my_package/share/my_package/launch/: listener.launch.py  talker.launch.py
log/: latest_build
src/my_bot/: CMakeLists.txt  ROS2_GAZEBO_CONTROL_DOCUMENTATION.md  auto_mover.py  camera_viewer.py  direct_joint_commander.py  gentle_joint_commander.py  keyboard_control.py  keyboard_control_fixed.py  object_tracker.py  test_camera.py
src/my_bot/config/: controllers.yaml  gz_bridge.yaml  joint_trajectory_publisher.yaml
src/my_bot/description/: camera.xacro  gazebo_control.xacro  robot.urdf  robot.urdf.xacro  robot_core.xacro  ros2_control.xacro
src/my_bot/launch/: launch_sim.launch.py  launch_sim_arti.launch.py  my_bot.launch.py  rsp.launch.py
src/my_bot/src/: joint_publisher.cpp
(+2 files in other folders)
